2.5.3 -> 3.0
	- better query semantics with symlinks (Tim Mooney)
	- finish planting /usr/lib/rpm (remove compatibility symlinks)
	- build.c: fix incorrect check for successful open
	- add new fully recursive macro.c
	- add {init,add,expand}Macro args everywhere (new macro.c compatibility)
	- create /usr/lib/rpm directory and move rpmrc et al there

2.5.2 -> 2.5.3:
	- allow %define with leading whitespace

2.5.1 -> 2.5.2:
	- added -bs to build just a source package
	- included irix.req and irix.prov (Tim Mooney)
	- copy CHANGELOG* and URL tags to all subpackages
	- follow symlinks when packaging sources
	- handle %files -f with no %setup (no build directory)
	- fixed ugly i18n header bug
	- deal with lang paths sanely when entries are missing languages
	- fix bug packing /usr/doc when last file was %dir
	- added --last alias
	- fix :depflags query format
	- Group: i18n (like Summary:)
	- make --justdb install files in normal state
	- %{fssizes} segv'd for packages with empty file lists
	- updated HP-UX, OSF1, Irix 6.x dependency scripts (Tim Mooney)
	- added arm and MachTen arch/os info
	- added --filesbypkg query format
	- updated README to have proper URLs
	- updated rpm.spec for proper paths and cleanliness
	- dependency resolution could hang when Provides: line is used in
	  rpmrc (Tim Mooney)
	- updated mips rpmrc entries (Alex deVries)
	- version/release conditional triggers weren't ignoring the trigger	
	  package name at the front of the TRIGGERVERSION
	- added --notriggers for -i and -e
	- made --triggers a synonym for --triggerscripts
	- ftp installs were trying to use /var/tmp/tmp
	- allow whitespace in source/patch lines
	
2.5 -> 2.5.1:
	- fail if sources are not regular files
	- wasn't catching readLine() errors
	- fixed (hopefully) temp file creation problems
	- make %doc obey --test
	- unlink before writing .rpms
	- librpm.c: added headerGzRead()/headerGzWrite()
	- set bzip2path via lib-rpmrc/configure (Toshio Kuratomi)